--- a/apps/smart-safety-solutions-admin/src/app/global.css
+++ b/apps/smart-safety-solutions-admin/src/app/global.css
@@ -58,6 +58,7 @@
 }
 
 html {
+  display: flex;
   -webkit-text-size-adjust: 100%;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
@@ -65,11 +66,16 @@ html {
   line-height: 1.5;
   tab-size: 4;
   scroll-behavior: smooth;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 body {
+  display: flex;
   font-family: inherit;
   line-height: inherit;
   margin: 0;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 h1,
 h2,
