adds placeholder notification button

--- a/apps/smart-safety-solutions-admin/src/app/global.css
+++ b/apps/smart-safety-solutions-admin/src/app/global.css
@@ -11,6 +11,10 @@
     @apply font-sans antialiased bg-background text-foreground;
   }
 
+  button {
+    --tw-ring-shadow: 0 0 #000 !important;
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
